fixed breadcrumbs cleaned up some files

--- a/site/data/i18n/en.json
+++ b/site/data/i18n/en.json
@@ -1,6 +1,5 @@
 {
 	"tmpl-accessibility-guide": "Accessibility guide",
-	"tmpl-design-guide": "Design guide",
 	"tmpl-style-guide": "Style guide",
-	"tmpl-writing-guide": "Writing guide"
+	"tmpl-writing-guide": "Content creation principles"
 }
