--- a/site/data/i18n/fr.json
+++ b/site/data/i18n/fr.json
@@ -1,6 +1,5 @@
 {
 	"tmpl-accessibility-guide": "Guide d’accessibilité",
-	"tmpl-design-guide": "Guide de conception",
 	"tmpl-style-guide": "Guide de style",
-	"tmpl-writing-guide": "Guide de rédaction"
+	"tmpl-writing-guide": "Principes de création du contenu"
 }
